2026-02-11 更新：扫码语音功能、搜索完善、代码清理
📱 小程序更新：
✅ 新增扫码语音功能 - 小姐姐温柔女声（扫码成功/失败/已领取）
✅ 搜索功能完善 - 工作页搜索补全、结果跳转优化
✅ Bug 修复 - StageDetector 代码清理、循环依赖解决

🗑️ 代码清理：
✅ 删除 12 个临时报告文件
✅ 更新 README 和使用说明

📖 文档：
✅ 新增「扫码语音功能使用说明.md」